--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
     "helmet": "^5.1.1",
