--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV= development
 PORT=4000
 MONGODB_URI=mongodb+srv://vikms:ustdedt8@cluster0.rtqxvkw.mongodb.net/?retryWrites=true&w=majority
-SECRET=secret
+JWT_SECRET=secret
