--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^17.0.0",
