--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
-    "express-validator": "^6.14.2",
     "helmet": "^5.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -35,6 +34,7 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "express-validator": "^6.14.2"
   }
 }
