--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "name": "blog-api",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "v16.15.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devStart": "nodemon ./bin/www"
