--- a/server/package.json
+++ b/server/package.json
@@ -31,13 +31,14 @@
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "express-validator": "^6.14.2"
+
   },
   "devDependencies": {
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "express-validator": "^6.14.2"
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
