--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.2",
     "helmet": "^5.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -29,11 +30,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "os": "^0.1.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "uuid": "^3.4.0",
-    "express-validator": "^6.14.2"
-
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^17.0.0",
