--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,15 @@
 {
   "name": "blog-api",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "engines": {
     "node": "v16.15.0"
   },
   "scripts": {
-    "start": "node ./bin/www",
-    "devStart": "nodemon ./bin/www"
+    "start": "node ./bin/www.ts",
+    "devStart": "nodemon ./bin/www.ts",
+    "build": "npx tsc"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -36,9 +38,20 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/debug": "^4.1.8",
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.2.5",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "typescript": "^5.1.3"
   }
 }
